Add missing gap

--- a/18/meta.yaml
+++ b/18/meta.yaml
@@ -79,10 +79,11 @@ props:
             I recommend setting this to CC BY 4.0, which means anyone can use your pack for any purpose and make changes as they desire, as long as they give you credit.
     license_text:
         type: string
-        ext: true
         desc: |
             If you want to include a LICENSE file inside your mod, datapack, and resource pack, you can put it's content in this box.
             Leaving this blank will not include a LICENSE file in the pack.
+        ext: true
+        gap: true
     filter:
         type: object
         desc: |
